js/src/tests/test262/language/module-code/ambiguous-export-bindings/error-export-from-named.js







































$DONOTEVALUATE();

export { x } from './error-export-from-named_FIXTURE.js';
